# tabb

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
font/: config.toml
src/tabb/: __init__.py  base.py  callback.py  command.py  config.py  context.py  decorators.py  exceptions.py  formatter.py  group.py  missing.py  nargs.py  parser.py  scheduler.py  types.py  utils.py
src/tabb/parameter/: __init__.py  base.py  depends.py  group.py  parser.py  resolve.py  types.py  utils.py
tests/: __init__.py
