[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabb"
dynamic = ["version"]
description = "Trevor's argparse but better."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Trevor Olson", email = "trevor@heytrevor.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/wtolson/tabb#readme"
Issues = "https://github.com/wtolson/tabb/issues"
Source = "https://github.com/wtolson/tabb"

[tool.hatch.version]
path = "src/tabb/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
python = "3.10"
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/tabb tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.hatch.envs.dev]
python = "3.10"
dependencies = [
  "ipython",
  "pdbpp",
]

[tool.black]
target-version = ["py310"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow shadowing builtins
  "A002",
  # Allow unused arguments
  "ARG002",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow using literal strings in exceptions
  "EM101",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore print statements
  "T201",
  # Allow magic numbers
  "PLR2004",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["tabb"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["tabb", "tests"]
branch = true
parallel = true
omit = [
  "src/tabb/__about__.py",
]

[tool.coverage.paths]
tabb = ["src/tabb", "*/tabb/src/tabb"]
tests = ["tests", "*/tabb/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
